testdata/baselines/reference/submodule/conformance/symbolProperty37.errors.txt
symbolProperty37.ts(3,5): error TS2300: Duplicate identifier '[Symbol.isConcatSpreadable]'.


==== symbolProperty37.ts (1 errors) ====
    interface I {
        [Symbol.isConcatSpreadable]: string;
        [Symbol.isConcatSpreadable]: string;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.isConcatSpreadable]'.
    }